# capstone

./: .env.example  .gitattributes  .gitignore  README.md  common_rules.docx  common_rules.md  findings_to_mention_in_the_paper.txt  refactor_and_mise_migration_plan.md  shared_config.py
data/: shared_eval_indices_primary_500.json  shared_eval_indices_secondary_200.json
data/ragbench/cuad/: dataset_info.json
data/ragbench/delucionqa/: state.json  (+1 more)
graph_rag/: AGENTS.md  config.py  differences.md  main.py  project_implementation.md  pyproject.toml  tmp_dataset_setup_plan.md
graph_rag/data/: mvp_eval_indices_50.json  shared_eval_indices.json
graph_rag/data/ragbench/cuad/: data-00000-of-00001.arrow  state.json
graph_rag/data/ragbench/delucionqa/: dataset_info.json
graph_rag/data/ragbench/emanual/: data-00000-of-00001.arrow  state.json
graph_rag/data/ragbench/hagrid/: dataset_info.json  state.json
graph_rag/data/ragbench/hotpotqa/: data-00000-of-00001.arrow  dataset_info.json  state.json
graph_rag/data/ragbench/msmarco/: data-00000-of-00001.arrow  dataset_info.json  state.json
graph_rag/data/ragbench_50/: data-00000-of-00001.arrow  dataset_info.json  state.json
graph_rag/outputs/chromadb/ace18d9c-2837-48f0-a4e3-c6f6b926a232/: index_metadata.pickle
graph_rag/scripts/: download_datasets.py  download_ragbench_sample.py  generate_eval_samples.py
graph_rag/src/: __init__.py  data_loader.py  embeddings_local.py  graph.py  llm_client.py  ner.py  pipeline.py  types.py  vector_store.py
scripts/: download_ragbench_sample.py  generate_eval_samples.py
(+2 files in other folders)
